methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: not found: type nbPas
def move(nbPas: Int , versLAvant : Boolean) : nbPas = {
                                              ^