methods.args.MethodsArgs.scala.code
def move(nbPas: Int , versLAvant : Boolean) : nbPas = {
  var nbPas=0
  nbPas=nbPas+1
}